--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                 <div class="footer-left">
                     <div class="certification-badge">
                         <a href="https://raqmi.dga.gov.sa/platforms/platforms/065db14c-35dc-4cb9-851e-08dd3b8858a5/platform-license">
-                            <img src="/photo/5.png" alt="Digital Certification">
+                            <img src="photo/5.png" alt="Digital Certification">
                         </a>
                     </div>
                     <div class="footer-links">
